# vmctl

./: .gitignore  .gitmodules  CONTEXT.md  PRD-name-aliases.md  README.md  conftest.py  pyproject.toml
docs/: prd-project-dir-single-root.md
docs/adr/: 0001-optional-vm-name-via-leading-dashdash.md  0002-snapshot-revert-owns-lifecycle.md  0003-depend-on-sss-for-file-sync.md  0004-unified-peripheral-connect-via-list.md  0005-short-flags-and-command-prefixes.md  0005-short-flags.md  0006-command-surface.md  0006-docker-git-command-surface.md  0007-cli-human-output-json-library-only.md  0008-clipboard-targets-interactive-session.md  0009-exec-t-output-capture.md  0010-cp-vmrun-single-file-backend.md
tests/: INTEGRATION.md  test_cli.py  test_clipboard.py  test_config.py  test_filesystem.py  test_guest.py  test_inspect.py  test_integration.py  test_network.py  test_peripheral.py  test_registry.py  test_render.py  test_resolution.py  test_runner.py  test_shares.py  test_snapshot.py  test_sync.py  test_vars.py  test_vmx_parser.py
tests/fixtures/: snapshot_query.json  test_vm.vmsd  test_vm.vmx
vmctl/: __init__.py  cli.py  config.py  exceptions.py  registry.py  render.py  runner.py  vmx_parser.py
vmctl/modules/: clipboard.py  filesystem.py  guest.py  inspect.py  mks.py  network.py  peripheral.py  power.py  shares.py  snapshot.py  sync.py  tools.py  vars.py
