[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vmctl"
version = "0.1.0"
description = "VMware Workstation Python CLI wrapper"
requires-python = ">=3.10"
dependencies = ["click>=8.0"]

[project.scripts]
vmctl = "vmctl.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["vmctl*"]
